Portfolio Pieces and Minor Changes

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
   <div class="row">
     <div class="twelve columns content">
 			   <P><i class="fa fa-star"></i>&nbsp;<strong>I am currently seeking full-time opportunities.</strong></P>
-		   <P>I'd love to chat about how we can work together. Shoot me an e-mail at <strong>allison.yan@gmail.com</strong>, or via <a href="contact.html">contact form</a>.
+		   <P>I'd love to chat about how we can work together.<br> Shoot me an e-mail at <strong>allison.yan@gmail.com</strong>, or via <a href="contact.html">contact form</a>.
 		   Thanks for stopping by.</P>
     </div>
   </div>
