--- a/work/bbm/index.html
+++ b/work/bbm/index.html
@@ -19,9 +19,9 @@
   <link rel="stylesheet" href="../../css/normalize.css">
   <link rel="stylesheet" href="../../css/skeleton.css">
   <link rel="stylesheet" href="../../css/style.css">
-  <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
-  <link href='../../css/SourceSerifPro-Regular.ttf' rel='stylesheet' type='text/css'>
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> 
+  <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
+  <link rel="icon" type="image/png" href="../../images/favicon.png">
 <!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -31,9 +31,9 @@
   ga('create', 'UA-61633837-1', 'auto');
   ga('send', 'pageview');
 
-</script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-<script src="jquery.sticky.js"></script>
+</script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
+<script src="../../jquery.sticky.js"></script>
 <script>
   $(document).ready(function(){
     $("#menu").sticky({topSpacing:0});
@@ -80,20 +80,24 @@
 	
 	 </p>
 	<h5 class="project-step">Environmental Analysis</h5>
-    <p>An environmental scan revealed the need for applications that put emotion management in the hands of children. 
+    <p>An environmental scan revealed the need for applications that put emotion management and tracking in the hands of children. 
 	We spoke to adults and children at the event about meltdowns and how they managed them. 
 We sought feedback from a team member's child about their tantrums and current coping strategies. 
 Every child handles stress differently, and we wanted to enable them to do so through a personalized app. 
 	</p>
 	<h5 class="project-step">Areas of Opportunity</h5>
-    <p>The main features of the iOS app (during the hackathon) included: 
-<ul><li>an interactive beaker to be filled or emptied on touch using a simple animation </li>
-<li>tailored suggestions on how to calm down based on one’s emotion level</li>
-<li>a profile page for the child to input their stressors, and what calmed them down</li></p>
+    <p><strong>Playful Interactivity</strong><br>
+    We envisioned an interactive beaker to be filled or emptied on touch using a simple animation, maintaining the original 
+	therapeutic principle driving our work. We included interactive, cute and playful elements in the app’s design in order to evoke a 
+positive emotional response from our intended audience.</p>
+	<p><strong>Personalization</strong><br>
+	A profile page for the child to input their stressors and what calmed them down would help them to recognize their triggers and warning signs.
+    </p>
+    <p><strong>Emotional Coach</strong><br>
+    Based on one's emotion level and inputted calming strategies, the app would provide just-in-time tailored suggestions.</p>	
+	<p><strong>Target Audience</strong><br>
+    The users of the app would have been young children, aged 7-12. We also wanted to include their parents/guardians as well as their therapists/counsellors if applicable. </p>	
 	
-	<p>We included interactive, cute and playful elements in the app’s design in order to evoke a 
-positive emotional response from our intended audience, children 7-9 years old.</p>
-PICTURES OF DIFFERENT EMOTIONS HERE 
 
 <h5 class="project-step">Initial Prototype</h5>
 <p>Our first prototype for the Hacking Health weekend aimed to showcase the main functionality of the app -- filling and emptying the beaker with "emotion" and 
@@ -101,11 +105,11 @@ displaying a message appropriate for the emotion level. My roles during the week
 </div>
 <div class="row">
 <div class="one-half column">
-<img src="bbm01.png" width="70%" height="70%">
+<img src="bbm01.png" class="u-max-full-width project-img">
 </div>
 
 <div class="one-half column">
-<img src="bbm02.png" width="70%" height="70%">
+<img src="bbm02.png" class="u-max-full-width project-img">
 </div>
 </div>
 
@@ -119,17 +123,17 @@ These included children who could possibly be prescribed the application by a ps
 <h5 class="project-step">Next Iteration</h5>
 <p>We decided to include a friendly on-boarding process to help children set up their BBM account, introducing the face of the application, Erlen. 
 Instead of tapping to increase/decrease the emotion level, a more intuitive sliding action was added. 
-In later iterations, we included animated bubbles and took advantage of the Apple Gyroscope to create more interesting interactions. 
+In later iterations, we included animated bubbles and waves and took advantage of the iPhone Gyroscope to create more interesting interactions. 
 </p>
 </div>
 </div>
 <div class="row">
 <div class="one-half column">
-<img src="bbm03.png" width="70%" height="70%">
+<img src="bbm03.png" class="u-max-full-width project-img">
 </div>
 
 <div class="one-half column">
-<img src="bbm04.png" width="70%" height="70%">
+<img src="bbm04.png" class="u-max-full-width project-img">
 </div>
 </div>
 <div class="row">
