--- a/work/tpl/index.html
+++ b/work/tpl/index.html
@@ -16,13 +16,13 @@
   <meta name="description" content="A portfolio by Toronto-based aspiring UX designer, Allison Yan. Having completed a practicum at Healthcare Human Factors, she is currently seeking opportunities in user experience research and design.">
   <meta name="author" content="">
   <meta name="robots" content="index,follow">  
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/skeleton.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'><link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
-  <link rel="icon" type="image/png" href="images/favicon.png">
-<script>
+  <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
+  <link rel="icon" type="image/png" href="../../images/favicon.png">
+  <!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -31,9 +31,9 @@
   ga('create', 'UA-61633837-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+</script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="jquery.sticky.js"></script>
+<script src="../../jquery.sticky.js"></script>
 <script>
   $(document).ready(function(){
     $("#menu").sticky({topSpacing:0});
@@ -59,10 +59,9 @@
 	</div> 
 	</div>
   </div>
-
+  
   <div class="row">
     <div class="twelve columns content">
-	<!-- content new here jul 24-->
 	<p><h4 class="project-title">LIBRAR-e</h4></P>
 	<h6 class="project-subtitle">Bringing library services to the forefront in an accessible app</h6>
 	<h6 class="project-type">Information Architecture, Graphic Design</h6>
@@ -90,9 +89,15 @@ The user can learn more about events and special news at their home library. Add
 We aimed our design at technology savvy people while addressing issues in accessibility (e.g., colour contrast, languages, visual impairment.)</p>
 
 <h5 class="project-step">Wireframes & Prototypes</h5>
+<img src="tpl-a.png" class="u-max-full-width project-img">
+<img src="tpl-b.png" class="u-max-full-width project-img">
 <p>Storyboard sketches illustrating potential use cases for LIBRAR-e (e.g., looking for a specific book in the library and checking out a book using the 
-digital library card.) 
-Wireframes of the main app screens. 
+digital library card.)
+<img src="tpl-d.png" class="u-max-full-width project-img">
+<img src="tpl-c.png" class="u-max-full-width project-img">
+Sketches of the information architecture (by Crystal Chin) and sketch wireframes of the main app screens. We went through several iterations, comparing the 
+potential difference in interaction between a pull-out side menu and a menu that was always present. Given that we only had 4 main functions, we decided to 
+use an always present button menu.
 </p>
 
 <h5 class="project-step">Mockups</h5>
@@ -103,7 +108,29 @@ a mascot for LIBRAR-e: a helpful robot named Dewey!
   <br>
   </div> 
 </div>
-
+  <div class="row">
+    <div class="one-third column content">
+	<img src="tpl-01.png" class="u-max-full-width project-img">
+	</div>
+	<div class="one-third column content">
+	<img src="tpl-02.png" class="u-max-full-width project-img">
+	</div>    
+	<div class="one-third column content">
+	<img src="tpl-03.png" class="u-max-full-width project-img">
+	</div>
+  </div>	
+  <div class="row">
+	<div class="one-third column content">
+	<img src="tpl-04.png" class="u-max-full-width project-img">
+	</div>
+   <div class="one-third column content">
+	<img src="tpl-05.png" class="u-max-full-width project-img">
+	</div>
+   <div class="one-third column content">
+    &nbsp;
+	</div>
+  </div>	
+  <BR>
   <div class="row">
     <div class="one-third column content">
 <strong class="project-substep">Team Members</strong><br>
