--- a/work/copd/index.html
+++ b/work/copd/index.html
@@ -19,10 +19,10 @@
   <link rel="stylesheet" href="../../css/normalize.css">
   <link rel="stylesheet" href="../../css/skeleton.css">
   <link rel="stylesheet" href="../../css/style.css">
-  <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
-  <link href='../../css/SourceSerifPro-Regular.ttf' rel='stylesheet' type='text/css'>
-  <link rel="icon" type="image/png" href="images/favicon.png">
-<!-- <script>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
+  <link rel="icon" type="image/png" href="../../images/favicon.png">
+  <!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -31,9 +31,9 @@
   ga('create', 'UA-61633837-1', 'auto');
   ga('send', 'pageview');
 
-</script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-<script src="jquery.sticky.js"></script>
+</script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="../../jquery.sticky.js"></script>
 <script>
   $(document).ready(function(){
     $("#menu").sticky({topSpacing:0});
@@ -64,13 +64,13 @@
     <div class="twelve columns hero">
 	<p><h4 class="project-title">HQO COPD Clinical Care Guidance</h4></P>
 	<h6 class="project-subtitle">Adapting a paper flowchart into a responsive web application</h6>
-	<h6 class="project-type">User Experience</h6>
+	<h6 class="project-type">User Experience, Prototyping</h6>
     </div>	
   </div>
   
   <div class="row">
     <div class="twelve columns content">  
-	<p>Health Quality Ontario asked Healthcare Human Factors to transform paper-based medical guidelines for chronic obstructive pulmonary disease into a responsive 
+	<p>Health Quality Ontario asked Healthcare Human Factors to transform paper-based medical guidelines for chronic obstructive pulmonary disease (COPD) into a responsive 
        web application. <p>
 	
 	<h5 class="project-step">Environmental Analysis</h5>
@@ -78,18 +78,25 @@
 	Additionally, we analyzed existing care pathways such as NICE by the NHS to better understand the structure of care guideline applications. 
 	</p>
 	<h5 class="project-step">Areas of Opportunity</h5>
-    <p>Our goal was to simplify the existing HQO guidelines on care for COPD, without compromising crucial information. 
-	Consulting with the client, we compiled existing approved COPD web resources that would assist clinicians as well as patients. 
-	Specifically, we wanted to design a responsive application that could work in an emergency setting as well as in a clinical consultation setting.</p>
+	<p><strong>Simplification</strong><br>
+    Our goal was to simplify the pages of the existing HQO COPD care guidelines (flow chart), without compromising important information. </p>
+    <p><strong>Contextualized & Helpful Information</strong><br>
+    Consulting with the client, we compiled existing approved COPD web resources that would assist clinicians as well as patients.</p>
+    <p><strong>Responsive Web Application</strong><br>
+	We wanted to design a responsive application that could work in an emergency setting as well as in a clinical consultation setting.</p>
+	<p><strong>Target Audience</strong><br>
+	Clinicians and healthcare professionals who may not encounter patients with COPD complications, and newer, inexperienced healthcare workers.</p>
+
 
 <h5 class="project-step">Wireframes & Prototypes</h5>
-<p>The app included a search functionality and clinic maps. 
-
-My colleague created the mobile Axure prototype based on HQO care guidelines and interviews. Based on mobile prototype, I created the desktop prototype in Axure. 
-Working in Agile development, we quickly tested interactions and experiences with each iteration.  
-
-</p>
-
+<p>My colleague created the mobile Axure prototype based on HQO care guidelines and interviews. Based on mobile prototype, I created the desktop prototype in Axure. 
+Working in Agile development, we quickly tested interactions and experiences with each iteration. </p>
+<img src="copd04.png" class="u-max-full-width project-img">
+<p>Usability testing revealed that users did not find or want to use the dropdown menu (left, centre). Thus, we implemented a more familiar hamburger menu (right).</p>
+<img src="copd06.png" class="project-img">
+<p>The desktop prototype displayed the menu at all times.
+Overall, users found both the mobile and desktop versions easy to navigate 
+and useful for less common COPD care information.</p>
 <h5 class="project-step">Usability Testing</h5>
 <p>My role primarily revolved around usability testing. I wrote 10 usability testing scenarios and pre- and post-surveys. I assisted in 
 recording participant observations and eliciting open-ended feedback with health professionals in their offices/hospitals. </p>
@@ -97,6 +104,7 @@ recording participant observations and eliciting open-ended feedback with health
 <p>We further optimized and simplified the mobile and desktop prototypes using the feedback we received during testing as well as meetings with our stakeholders. 
 I analyzed and compared data from two rounds of testing, which showed improved navigation ability and satisfaction with the application.</p>
 <h5 class="project-step">Outcomes</h5>
+<img src="copd10.png" class="project-img">
 <P>We found that users appreciated the fact that we had included clinic maps and test thresholds, as they are normally memorized or readily found consolidated. 
 Our graphic designer created a visual treatment based on a set style guide. We received positive feedback from our stakeholders on our design and analysis. 
 
