--- a/work/spectrum/index.html
+++ b/work/spectrum/index.html
@@ -16,13 +16,13 @@
   <meta name="description" content="A portfolio by Toronto-based aspiring UX designer, Allison Yan. Having completed a practicum at Healthcare Human Factors, she is currently seeking opportunities in user experience research and design.">
   <meta name="author" content="">
   <meta name="robots" content="index,follow">  
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/skeleton.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'><link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
-  <link rel="icon" type="image/png" href="images/favicon.png">
-<script>
+  <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
+  <link rel="icon" type="image/png" href="../../images/favicon.png">
+  <!-- <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -31,9 +31,9 @@
   ga('create', 'UA-61633837-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+</script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="jquery.sticky.js"></script>
+<script src="../../jquery.sticky.js"></script>
 <script>
   $(document).ready(function(){
     $("#menu").sticky({topSpacing:0});
@@ -41,6 +41,7 @@
 </script>
 </head>
 <body>
+
 
 <div class="container">
 
@@ -92,8 +93,10 @@ In general, it was found that users of mental health applications value discreti
 <p><strong>Target Audience</strong><br>Individuals with BPD with strong social support, who are currently trying to manage their symptoms.</p>
 
 <h5 class="project-step">Wireframes & Prototypes</h5>
-<p>We first established our information architecture and application flow. 
-We sketched our initial user interfaces and created paper wireframes before adapting them into an interactive, medium fidelity prototype in PowerPoint. 
+<img src="spectrum-01.png" class="u-max-full-width project-img">
+<p>We first established our information architecture and application flow. </p>
+<img src="spectrum-02.png" class="u-max-full-width project-img">
+<p>We sketched our initial user interfaces and created paper wireframes before adapting them into an interactive, medium fidelity prototype in PowerPoint. 
 We improved our prototype on the next iteration based on results from a heuristic analysis. 
 </p>
 
