--- a/work/spectrum/index.html
+++ b/work/spectrum/index.html
@@ -94,11 +94,45 @@ In general, it was found that users of mental health applications value discreti
 
 <h5 class="project-step">Wireframes & Prototypes</h5>
 <img src="spectrum-01.png" class="u-max-full-width project-img">
-<p>We first established our information architecture and application flow. </p>
 <img src="spectrum-02.png" class="u-max-full-width project-img">
-<p>We sketched our initial user interfaces and created paper wireframes before adapting them into an interactive, medium fidelity prototype in PowerPoint. 
-We improved our prototype on the next iteration based on results from a heuristic analysis. 
-</p>
+<p>We first established our information architecture and application flow. We then sketched out our ideas for the main screen and menus.</p>
+
+</div>
+</div>
+  <div class="row">
+    <div class="one-third column content">
+	<img src="spectrum-03.png" class="u-max-full-width project-img">
+	</div>
+	<div class="one-third column content">
+	<img src="spectrum-04.png" class="u-max-full-width project-img">
+	</div>
+	<div class="one-third column content">
+	<img src="spectrum-05.png" class="u-max-full-width project-img">
+	</div>
+  </div>
+
+  <p class="content">We sketched our initial user interfaces and created paper wireframes before adapting them into an interactive, medium fidelity prototype in PowerPoint. 
+For example, we improved the main screen of our initial PowerPoint prototype (left) on the next iteration based on results from a heuristic analysis (centre) and usability testing (right). </p>
+
+    <div class="row">
+    <div class="one-third column content">
+	<img src="spectrum-06.png" class="u-max-full-width project-img">
+	</div>
+	<div class="one-third column content">
+	<img src="spectrum-07.png" class="u-max-full-width project-img">
+	</div>
+	<div class="one-third column content">
+	&nbsp;
+	</div>
+  </div>
+  
+   <div class="row">
+    <div class="twelve columns content">
+ <p>The evolution of our day tracker screen from our first iteration to post-testing, elaborating on our mood tracker concept. </p>
+ </div>
+ </div>
+  <div class="row">
+    <div class="twelve columns content">
 
 <h5 class="project-step">Usability Testing</h5>
 <p>Using our PowerPoint prototype, we conducted usability testing at the Centre for Global eHealth Innovation’s Human Factors labs. 
