--- a/work.html
+++ b/work.html
@@ -59,15 +59,41 @@
 	</div> 
 	</div>
   </div>
-
-    <div class="row">
-    <div class="twelve columns content" style="text-align:center">
-	<span class="bigbutton"><a href="AllisonYan-resume.pdf" class="hvr-fade">Download my r&eacute;sum&eacute;</a></span> 
-	<br><br>
-	<P>My portfolio is currently available upon request.</P>
+<p>&nbsp;</p>
+ <div class="row">
+    <div class="one-half column">
+	<div class="folio-piece"> 
+<a href="#"><img src="images/ay.jpg" class="u-max-full-width project-img"></a>
+<div class="caption"><a href="#">Clinical Care Guidelines
+<p>UX, Usability Testing</p></a></div>
+</div> 
 	</div>
-  </div>
-    
+	<div class="one-half column">
+	<div class="folio-piece"> 
+<a href="#"><img src="images/ay.jpg" class="u-max-full-width project-img"></a>
+<div class="caption"><a href="#">Bye Bye Meltdown
+<p>UX, Usability Testing</p></a></div>
+
+</div> 
+	</div>
+  </div> 
+    <div class="row">
+    <div class="one-half column">
+	<div class="folio-piece"> 
+<a href="#"><img src="images/ay.jpg" width="300" height="300" class="u-max-full-width project-img"></a>
+<div class="caption"><a href="#">LIBRAR-e
+<p>UX, Usability Testing</p></a></div>
+</div> 
+	</div>
+  <div class="one-half column">
+	<div class="folio-piece"> 
+        <a href="#"><img src="images/ay.jpg" width="300" height="300" class="u-max-full-width project-img"></a>
+        <div class="caption"><a href="#">Spectrum
+        <p>UX, Usability Testing</p></a></div>
+    </div> 
+   </div>
+  </div> 
+  
 
   <div class="row">
     <div class="footer twelve columns">
