--- a/work/copd/index.html
+++ b/work/copd/index.html
@@ -51,9 +51,9 @@
 	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
 		<nav>
           <ul>
-            <a href="about.html"><li>About</li></a>
-            <a href="work.html"><li>Work</li></a>
-            <a href="contact.html"><li>Contact</li></a>
+            <a href="../../about.html"><li>About</li></a>
+            <a href="../../work.html"><li>Work</li></a>
+            <a href="../../contact.html"><li>Contact</li></a>
           </ul>
         </nav>    
 	</div> 
@@ -146,7 +146,7 @@ Redmine<br><br>
 	<a href="http://www.twitter.com/allisonyan_" target='_blank' title="Twitter: @allisonyan_"><i class="fa fa-twitter fa-lg links"></i></a>
 	<a href="http://www.linkedin.com/in/allisonyan" target='_blank'><i class="fa fa-linkedin fa-lg links"></i></a>
 	<a href="http://www.pinterest.com/allisony_n" target='_blank'><i class="fa fa-pinterest fa-lg links"></i></a>
-	<a href="contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
+	<a href="../../contact.html"><i class="fa fa-envelope-o fa-lg links"></i></div></a>
     <p class="copyright">&copy; 2015 Allison Yan</p>
  
   </div>
