Add first 4 items to portfolio and home page

--- a/work.html
+++ b/work.html
@@ -60,19 +60,19 @@
 	</div>
   </div>
 <p>&nbsp;</p>
- <div class="row">
+   <div class="row">
     <div class="one-half column">
 	<div class="folio-piece"> 
-<a href="#"><img src="images/ay.jpg" class="u-max-full-width project-img"></a>
-<div class="caption"><a href="#">Clinical Care Guidelines
-<p>UX, Usability Testing</p></a></div>
+<a href="work/copd/"><img src="work/copd/copd-logo.png" class="u-max-full-width project-img"></a>
+<div class="caption"><a href="work/copd/">Clinical Care Guidelines
+<p>UX, Prototyping, Usability Testing</p></a></div>
 </div> 
 	</div>
 	<div class="one-half column">
 	<div class="folio-piece"> 
-<a href="#"><img src="images/ay.jpg" class="u-max-full-width project-img"></a>
-<div class="caption"><a href="#">Bye Bye Meltdown
-<p>UX, Usability Testing</p></a></div>
+<a href="work/bbm/"><img src="work/bbm/mrbubbles.png" class="u-max-full-width project-img"  style="background:#7bb7ee"></a>
+<div class="caption"><a href="work/bbm">Bye Bye Meltdown
+<p>UX, Mobile Application</p></a></div>
 
 </div> 
 	</div>
@@ -80,16 +80,16 @@
     <div class="row">
     <div class="one-half column">
 	<div class="folio-piece"> 
-<a href="#"><img src="images/ay.jpg" width="300" height="300" class="u-max-full-width project-img"></a>
-<div class="caption"><a href="#">LIBRAR-e
-<p>UX, Usability Testing</p></a></div>
+<a href="work/tpl/"><img src="work/tpl/dewey.png" class="u-max-full-width project-img" style="background:#edfeff"></a>
+<div class="caption"><a href="work/tpl">LIBRAR-e
+<p>IA, Graphic Design</p></a></div>
 </div> 
 	</div>
   <div class="one-half column">
 	<div class="folio-piece"> 
-        <a href="#"><img src="images/ay.jpg" width="300" height="300" class="u-max-full-width project-img"></a>
-        <div class="caption"><a href="#">Spectrum
-        <p>UX, Usability Testing</p></a></div>
+        <a href="work/spectrum/"><img src="work/spectrum/spectrum-logo.png" class="u-max-full-width project-img"></a>
+        <div class="caption"><a href="work/spectrum/">Spectrum
+        <p>UX, IA, Usability Testing</p></a></div>
     </div> 
    </div>
   </div> 
