Add portfolio to index and work.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="work.html"><li>Work</li></a>
             <a href="contact.html"><li>Contact</li></a>
           </ul>
-        </nav>  
+        </nav>    
 	</div> 
 	</div>
   </div>
@@ -66,9 +66,43 @@
 	<p>I'm a user experience designer in Toronto, Canada.</p>
     <p>I aim to engage users in the development of enjoyable product experiences.</p>
 	<p>Most recently, I interned at <a href="http://www.humanfactors.ca" target='_blank'>Healthcare Human Factors</a>.</p>
-	<span class="bigbutton"><a href="about.html" class="hvr-fade">Learn More</a></span>
 	</div>
   </div>
+  
+
+  <div class="row">
+    <div class="one-half column">
+	<div class="folio-piece"> 
+<a href="work/copd/index.html"><img src="work/copd/copd-logo.png" class="u-max-full-width project-img"></a>
+<div class="caption"><a href="work/copd/index.html">Clinical Care Guidelines
+<p>UX, Prototyping, Usability Testing</p></a></div>
+</div> 
+	</div>
+	<div class="one-half column">
+	<div class="folio-piece"> 
+<a href="work/bbm/index.html"><img src="work/bbm/mrbubbles.png" class="u-max-full-width project-img"  style="background:#7bb7ee"></a>
+<div class="caption"><a href="work/bbm">Bye Bye Meltdown
+<p>UX, Mobile Application</p></a></div>
+
+</div> 
+	</div>
+  </div> 
+    <div class="row">
+    <div class="one-half column">
+	<div class="folio-piece"> 
+<a href="work/tpl/index.html"><img src="work/tpl/dewey.png" class="u-max-full-width project-img" style="background:#edfeff"></a>
+<div class="caption"><a href="work/tpl/index.html">LIBRAR-e
+<p>IA, Graphic Design</p></a></div>
+</div> 
+	</div>
+  <div class="one-half column">
+	<div class="folio-piece"> 
+        <a href="work/spectrum/index.html"><img src="work/spectrum/spectrum-logo.png" class="u-max-full-width project-img"></a>
+        <div class="caption"><a href="work/spectrum/index.html">Spectrum
+        <p>UX, IA, Usability Testing</p></a></div>
+    </div> 
+   </div>
+  </div> 
   
   <div class="row">
     <div class="footer twelve columns">
