--- a/work.html
+++ b/work.html
@@ -63,15 +63,15 @@
    <div class="row">
     <div class="one-half column">
 	<div class="folio-piece"> 
-<a href="work/copd/"><img src="work/copd/copd-logo.png" class="u-max-full-width project-img"></a>
-<div class="caption"><a href="work/copd/">Clinical Care Guidelines
+<a href="work/copd/index.html"><img src="work/copd/copd-logo.png" class="u-max-full-width project-img"></a>
+<div class="caption"><a href="work/copd/index.html">Clinical Care Guidelines
 <p>UX, Prototyping, Usability Testing</p></a></div>
 </div> 
 	</div>
 	<div class="one-half column">
 	<div class="folio-piece"> 
-<a href="work/bbm/"><img src="work/bbm/mrbubbles.png" class="u-max-full-width project-img"  style="background:#7bb7ee"></a>
-<div class="caption"><a href="work/bbm">Bye Bye Meltdown
+<a href="work/bbm/index.html"><img src="work/bbm/mrbubbles.png" class="u-max-full-width project-img"  style="background:#7bb7ee"></a>
+<div class="caption"><a href="work/bbm/index.html">Bye Bye Meltdown
 <p>UX, Mobile Application</p></a></div>
 
 </div> 
@@ -80,15 +80,15 @@
     <div class="row">
     <div class="one-half column">
 	<div class="folio-piece"> 
-<a href="work/tpl/"><img src="work/tpl/dewey.png" class="u-max-full-width project-img" style="background:#edfeff"></a>
-<div class="caption"><a href="work/tpl">LIBRAR-e
+<a href="work/tpl/index.html"><img src="work/tpl/dewey.png" class="u-max-full-width project-img" style="background:#edfeff"></a>
+<div class="caption"><a href="work/tpl/index.html">LIBRAR-e
 <p>IA, Graphic Design</p></a></div>
 </div> 
 	</div>
   <div class="one-half column">
 	<div class="folio-piece"> 
-        <a href="work/spectrum/"><img src="work/spectrum/spectrum-logo.png" class="u-max-full-width project-img"></a>
-        <div class="caption"><a href="work/spectrum/">Spectrum
+        <a href="work/spectrum/index.html"><img src="work/spectrum/spectrum-logo.png" class="u-max-full-width project-img"></a>
+        <div class="caption"><a href="work/spectrum/index.html">Spectrum
         <p>UX, IA, Usability Testing</p></a></div>
     </div> 
    </div>
