--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 	<p>I'm a user experience designer in Toronto, Canada.</p>
     <p>I aim to engage users in the development of enjoyable product experiences.</p>
 	<p>Most recently, I interned at <a href="http://www.humanfactors.ca" target='_blank'>Healthcare Human Factors</a>.</p>
+		<span class="bigbutton"><a href="about.html" class="hvr-fade">Learn More</a></span>
 	</div>
   </div>
   
