Update resize behaviour, prev next page footer

--- a/work/bbm/index.html
+++ b/work/bbm/index.html
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
+	<span class="bigbutton"><a class="hvr-fade" href="../..">Allison Yan</a></span>
 		<nav>
           <ul>
             <a href="../../about.html"><li>About</li></a>
@@ -146,10 +146,9 @@ with children under 13.
 <p align="center"><img src="bbm-05.png" class="u-max-full-width"></center>
 <h5 class="project-step">Outcomes</h5>
 <P>As of September 2014, I am no longer involved with Bye Bye Meltdown.</P>
- <br>
   </div> 
 </div>
-
+<p>May-September 2014</p>
   <div class="row">
     <div class="one-third column content">
 <strong class="project-substep">Team Members</strong><br>
@@ -175,7 +174,14 @@ Adobe Photoshop<br>
 Microsoft PowerPoint<br><br>
 	</div>
   </div>
-<p>May-September 2014</p>
+    <div class="row">
+    <div class="one-half column content">
+    <&nbsp;<a href="../copd/index.html">HQO COPD Clinical Care Guidance</a>
+    </div>	
+    <div class="one-half column content right">
+    <a href="../tpl/index.html">LIBRAR-e: The TPL App</a>&nbsp;>
+    </div>
+  </div>	
   <div class="row">
     <div class="footer twelve columns">
 	<a href="http://www.twitter.com/allisonyan_" target='_blank' title="Twitter: @allisonyan_"><i class="fa fa-twitter fa-lg links"></i></a>
