--- a/work/copd/index.html
+++ b/work/copd/index.html
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
+	<span class="bigbutton"><a class="hvr-fade" href="../..">Allison Yan</a></span>
 		<nav>
           <ul>
             <a href="../../about.html"><li>About</li></a>
@@ -93,7 +93,7 @@
 Working in Agile development, we quickly tested interactions and experiences with each iteration. </p>
 <img src="copd04.png" class="u-max-full-width project-img">
 <p>Usability testing revealed that users did not find or want to use the dropdown menu (left, centre). Thus, we implemented a more familiar hamburger menu (right).</p>
-<img src="copd06.png" class="project-img">
+<img src="copd06.png" class="u-max-full-width project-img">
 <p>The desktop prototype displayed the menu at all times.
 Overall, users found both the mobile and desktop versions easy to navigate 
 and useful for less common COPD care information.</p>
@@ -104,14 +104,14 @@ recording participant observations and eliciting open-ended feedback with health
 <p>We further optimized and simplified the mobile and desktop prototypes using the feedback we received during testing as well as meetings with our stakeholders. 
 I analyzed and compared data from two rounds of testing, which showed improved navigation ability and satisfaction with the application.</p>
 <h5 class="project-step">Outcomes</h5>
-<img src="copd10.png" class="project-img">
+<img src="copd10.png" class="u-max-full-width project-img">
 <P>We found that users appreciated the fact that we had included clinic maps and test thresholds, as they are normally memorized or readily found consolidated. 
 Our graphic designer created a visual treatment based on a set style guide. We received positive feedback from our stakeholders on our design and analysis. 
 
 </P>
- <br>
   </div> 
 </div>
+<p>August-September 2014</p>
 
   <div class="row">
     <div class="one-third column content">
@@ -140,7 +140,14 @@ Microsoft Excel<br>
 Redmine<br><br>
 	</div>
   </div>
-<p>August-September 2014</p>
+  <div class="row">
+    <div class="one-half column content">
+    <&nbsp;<a href="../spectrum/index.html">Spectrum</a>
+    </div>	
+    <div class="one-half column content right">
+    <a href="../bbm/index.html">Bye Bye Meltdown</a>&nbsp;>
+    </div>
+  </div>	
   <div class="row">
     <div class="footer twelve columns">
 	<a href="http://www.twitter.com/allisonyan_" target='_blank' title="Twitter: @allisonyan_"><i class="fa fa-twitter fa-lg links"></i></a>
