--- a/work/spectrum/index.html
+++ b/work/spectrum/index.html
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
+	<span class="bigbutton"><a class="hvr-fade" href="../..">Allison Yan</a></span>
 		<nav>
           <ul>
             <a href="../../about.html"><li>About</li></a>
@@ -139,9 +139,9 @@ For example, we improved the main screen of our initial PowerPoint prototype (le
 We produced usability scenarios and took comprehensive time-stamped notes on participant feedback, expressions, and navigation. 
 We analyzed our results to identify the severity of usability issues and what to improve or keep for the final iteration. 
 </p>
-  <br>
   </div> 
 </div>
+    <p>January-April 2014</p>
 
   <div class="row">
     <div class="one-third column content">
@@ -170,8 +170,15 @@ Google Docs, Sheets<br>
 Microsoft PowerPoint<br><br>
 	</div>
   </div>
-    <p>January-April 2014</p>
 
+  <div class="row">
+    <div class="one-half column content">
+    <&nbsp;<a href="../tpl/index.html">LIBRAR-e: The TPL App</a>
+    </div>	
+    <div class="one-half column content right">
+    <a href="../copd/index.html">HQO COPD Clinical Care Guidance</a>&nbsp;>
+    </div>
+  </div>	
   <div class="row">
     <div class="footer twelve columns">
 	<a href="http://www.twitter.com/allisonyan_" target='_blank' title="Twitter: @allisonyan_"><i class="fa fa-twitter fa-lg links"></i></a>
@@ -181,6 +188,8 @@ Microsoft PowerPoint<br><br>
     <p class="copyright">&copy; 2015 Allison Yan</p>
  
   </div>
+  
+
 	
 </div>
 
