--- a/work/tpl/index.html
+++ b/work/tpl/index.html
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
+	<span class="bigbutton"><a class="hvr-fade" href="../..">Allison Yan</a></span>
 		<nav>
           <ul>
             <a href="../../about.html"><li>About</li></a>
@@ -130,7 +130,8 @@ a mascot for LIBRAR-e: a helpful robot named Dewey!
     &nbsp;
 	</div>
   </div>	
-  <BR>
+    <p>March-April 2014</p>
+
   <div class="row">
     <div class="one-third column content">
 <strong class="project-substep">Team Members</strong><br>
@@ -152,8 +153,14 @@ Adobe Photoshop<br>
 Adobe Illustrator<br><br>
 	</div>
   </div>
-    <p>January-April 2014</p>
-
+      <div class="row">
+    <div class="one-half column content">
+    <&nbsp;<a href="../bbm/index.html">Bye Bye Meltdown</a>
+    </div>	
+    <div class="one-half column content right">
+    <a href="../spectrum/index.html">Spectrum</a>&nbsp;>
+    </div>
+  </div>	
   <div class="row">
     <div class="footer twelve columns">
 	<a href="http://www.twitter.com/allisonyan_" target='_blank' title="Twitter: @allisonyan_"><i class="fa fa-twitter fa-lg links"></i></a>
