Improve language and add index.html to addresses

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
 	   <span class="content">
 		   <P>I'm Allison Yan, and I am a UX designer based in Toronto, Canada. 
 		   As a designer with a development background, I seek to understand what makes an experience enjoyable, and to figure out how to support people and their work through design. 
-		   My favourite questions are <strong>"Why?"</strong> and <strong>"How can we make this better?"</strong> 		  
+		   		   My favourite questions are <strong>"Why?"</strong> and <strong>"How can we make this better?"</strong> 		  
 	   </span>
 	</div>	  
 
@@ -84,7 +84,7 @@
   
   <div class="row">
     <div class="twelve columns content">
-			   <P><i class="fa fa-star"></i>&nbsp;<strong>I am currently seeking full-time internships.</strong></P>
+			   <P><i class="fa fa-star"></i>&nbsp;<strong>I am currently seeking full-time opportunities.</strong></P>
 		   <P>I'd love to chat about how we can work together.<br> Shoot me an e-mail at <strong>allison.yan@gmail.com</strong>, or via <a href="contact.html">contact form</a>.
 		   Thanks for stopping by.</P>
     </div>
