--- a/work/tpl/index.html
+++ b/work/tpl/index.html
@@ -48,7 +48,7 @@
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="bigbutton"><a class="hvr-fade" href="../..">Allison Yan</a></span>
+	<span class="bigbutton"><a class="hvr-fade" href="../../index.html">Allison Yan</a></span>
 		<nav>
           <ul>
             <a href="../../about.html"><li>About</li></a>
