Change work to three columns

--- a/work/tpl/index.html
+++ b/work/tpl/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/png" href="../../images/favicon.png">
-  <!-- <script>
+  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -31,7 +31,7 @@
   ga('create', 'UA-61633837-1', 'auto');
   ga('send', 'pageview');
 
-</script> -->
+</script> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../../jquery.sticky.js"></script>
 <script>
@@ -67,7 +67,7 @@
 	<h6 class="project-type">Information Architecture, Graphic Design</h6>
 	<p>My partner and I imagined a concept for a Toronto Public Library (TPL) app in order to address needs of 
 usability and incorporation of smart phones. Reflecting on our personal experiences, we wanted to make the library experience 
-more enjoyable by integrating the system into a personalized mobile application.</p>
+more enjoyable by integrating the system into a personalized mobile application. </p>
 	
 	<h5 class="project-step">Environmental Analysis</h5>
     <p>We examined TPL client habits and service gaps from official TPL reports online. We found that awareness of library services is low, 
