--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 	</div>
   </div>
   
-
+<hr width=50%>
   <div class="row">
-    <div class="one-half column">
+    <div class="one-third column">
 	<div class="folio-piece"> 
 <a href="work/copd/index.html"><img src="work/copd/copd-logo.png" class="u-max-full-width project-img"></a>
 <div class="caption"><a href="work/copd/index.html">Clinical Care Guidelines
 <p>UX, Prototyping, Usability Testing</p></a></div>
 </div> 
 	</div>
-	<div class="one-half column">
+	<div class="one-third column">
 	<div class="folio-piece"> 
 <a href="work/bbm/index.html"><img src="work/bbm/mrbubbles.png" class="u-max-full-width project-img"  style="background:#7bb7ee"></a>
 <div class="caption"><a href="work/bbm">Bye Bye Meltdown
@@ -90,23 +90,29 @@
 
 </div> 
 	</div>
-  </div> 
-    <div class="row">
-    <div class="one-half column">
+	    <div class="one-third column">
 	<div class="folio-piece"> 
 <a href="work/tpl/index.html"><img src="work/tpl/dewey.png" class="u-max-full-width project-img" style="background:#edfeff"></a>
 <div class="caption"><a href="work/tpl/index.html">LIBRAR-e
 <p>IA, Graphic Design</p></a></div>
 </div> 
 	</div>
-  <div class="one-half column">
+  </div> 
+    <div class="row">
+  <div class="one-third column">
 	<div class="folio-piece"> 
         <a href="work/spectrum/index.html"><img src="work/spectrum/spectrum-logo.png" class="u-max-full-width project-img"></a>
         <div class="caption"><a href="work/spectrum/index.html">Spectrum
         <p>UX, IA, Usability Testing</p></a></div>
     </div> 
    </div>
-  </div> 
+       <div class="one-third column">
+&nbsp;
+	</div>
+	    <div class="one-third column">
+&nbsp;
+</div> 
+	</div>
   
   <div class="row">
     <div class="footer twelve columns">
