Add Aunties, Resize BBM pics, Modify index/work

--- a/index.html
+++ b/index.html
@@ -74,40 +74,55 @@
   </div>
   
 <hr width=50%>
+<h4>UI/UX</h4>
   <div class="row">
     <div class="one-third column">
 	<div class="folio-piece"> 
 <a href="work/copd/index.html"><img src="work/copd/copd-logo.png" class="u-max-full-width project-img"></a>
-<div class="caption"><a href="work/copd/index.html">Clinical Care Guidelines
-<p>UX, Prototyping, Usability Testing</p></a></div>
+<div class="caption"><a href="work/copd/index.html">Clinical Care Guidelines</a></div>
 </div> 
 	</div>
 	<div class="one-third column">
 	<div class="folio-piece"> 
 <a href="work/bbm/index.html"><img src="work/bbm/mrbubbles.png" class="u-max-full-width project-img"  style="background:#7bb7ee"></a>
-<div class="caption"><a href="work/bbm">Bye Bye Meltdown
-<p>UX, Mobile Application</p></a></div>
+<div class="caption"><a href="work/bbm">Bye Bye Meltdown</a></div>
 
 </div> 
 	</div>
 	    <div class="one-third column">
 	<div class="folio-piece"> 
 <a href="work/tpl/index.html"><img src="work/tpl/dewey.png" class="u-max-full-width project-img" style="background:#edfeff"></a>
-<div class="caption"><a href="work/tpl/index.html">LIBRAR-e
-<p>IA, Graphic Design</p></a></div>
+<div class="caption"><a href="work/tpl/index.html">LIBRAR-e</a></div>
 </div> 
 	</div>
   </div> 
     <div class="row">
   <div class="one-third column">
-	<div class="folio-piece"> 
-        <a href="work/spectrum/index.html"><img src="work/spectrum/spectrum-logo.png" class="u-max-full-width project-img"></a>
-        <div class="caption"><a href="work/spectrum/index.html">Spectrum
-        <p>UX, IA, Usability Testing</p></a></div>
-    </div> 
+&nbsp;
    </div>
        <div class="one-third column">
+	<div class="folio-piece"> 
+        <a href="work/spectrum/index.html"><img src="work/spectrum/spectrum-logo.png" class="u-max-full-width project-img"></a>
+        <div class="caption"><a href="work/spectrum/index.html">Spectrum</a></div>
+    </div> 
+	</div>
+	    <div class="one-third column">
 &nbsp;
+</div> 
+	</div>
+	
+	<hr width="50%">
+	<h4>Print</h4>
+	
+	    <div class="row">
+  <div class="one-third column">
+&nbsp;
+   </div>
+       <div class="one-third column">
+	<div class="folio-piece"> 
+        <a href="work/aunties/index.html"><img src="work/aunties/aunties-logo.png" class="u-max-full-width project-img"></a>
+        <div class="caption"><a href="work/aunties/index.html">Auntie's Noodle</a></div>
+    </div> 
 	</div>
 	    <div class="one-third column">
 &nbsp;
