--- a/work/bbm/index.html
+++ b/work/bbm/index.html
@@ -145,7 +145,7 @@ with children under 13.
 </p>
 <p align="center"><img src="bbm-05.png" class="u-max-full-width"></center>
 <h5 class="project-step">Outcomes</h5>
-<P>As of September 2014, I am no longer involved with Bye Bye Meltdown.</P>
+<P>We gathered more press and interest throughout the summer. We were invited by the GCI group to speak to a group of mothers/parents as well about our concept!</P>
   </div> 
 </div>
 <p>May-September 2014</p>
