Include mention of UI in TPL

--- a/work/tpl/index.html
+++ b/work/tpl/index.html
@@ -64,7 +64,7 @@
     <div class="twelve columns content">
 	<p><h4 class="project-title">LIBRAR-e</h4></P>
 	<h6 class="project-subtitle">Bringing library services to the forefront in an accessible app</h6>
-	<h6 class="project-type">Information Architecture, Graphic Design</h6>
+	<h6 class="project-type">Information Architecture, User Interface</h6>
 	<p>My partner and I imagined a concept for a Toronto Public Library (TPL) app in order to address needs of 
 usability and incorporation of smart phones. Reflecting on our personal experiences, we wanted to make the library experience 
 more enjoyable by integrating the system into a personalized mobile application. </p>
