--- a/work/aunties/index.html
+++ b/work/aunties/index.html
@@ -105,7 +105,10 @@ Typesetting<br>
    
 <strong class="project-substep">Tools</strong><br>
 Adobe Illustrator<br>
-Adobe Photoshop<br><br>
+Adobe Photoshop<br>
+Paper<br>
+Twine<br> 
+<br>
 	</div>
   </div>
 
