Add GA, fix mobile header CSS
and some about page formatting

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <title>Allison Yan | About Me</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A portfolio by Toronto-based aspiring UX designer, Allison Yan. Having completed a practicum at Healthcare Human Factors, she is currently seeking opportunities in user experience research and design.">
+  <meta name="description" content="Portfolio by Toronto-based UX designer Allison Yan.">
   <meta name="author" content="">
   <meta name="robots" content="index,follow">
   <link rel="stylesheet" href="css/normalize.css">
@@ -93,14 +93,14 @@
 
     <div class="row">		   
 	<div class="one-half column description">   
-		NOTES ON A PORTFOLIO<BR>
-		This site was built using <a href="http://getskeleton.com/" target='_blank'>Skeleton</a> boilerplate, and is hosted on  <a href="https://pages.github.com/" target='_blank'>GitHub Pages</a>.
+		<P>NOTES ON A PORTFOLIO<BR>
+		This site was built using <a href="http://getskeleton.com/" target='_blank'>Skeleton</a> boilerplate, and is hosted on  <a href="https://pages.github.com/" target='_blank'>GitHub Pages</a>.</P>
     </div>
 	<div class="one-half column description">   
-		FRIENDS<br>
+		<P>FRIENDS<br>
 		<a href="http://www.instagram.com/d_rr_ll" target='_blank' title="Resident Cool Guy">Darrell de Lara</a>
 		<br><a href="http://www.eubene.me" target='_blank' title="A Righteous Dude">Eubene Sa</a> 
-		<br><a href="http://www.crystalchin.ca" target='_blank'>Crystal Chin</a>
+		<br><a href="http://www.crystalchin.ca" target='_blank'>Crystal Chin</a></p>
     </div>	
   </div>
   
