--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <title>Allison Yan | Work</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A portfolio by Toronto-based aspiring UX designer, Allison Yan. Having completed a practicum at Healthcare Human Factors, she is currently seeking opportunities in user experience research and design.">
+  <meta name="description" content="Portfolio by Toronto-based UX designer Allison Yan.">
   <meta name="author" content="">
   <meta name="robots" content="index,follow">  
   <link rel="stylesheet" href="css/normalize.css">
