--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <meta charset="utf-8">
   <title>Allison Yan | Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A portfolio by Toronto-based UX designer, Allison Yan. Having completed an internship at Healthcare Human Factors, she is currently seeking opportunities in user experience research and design.">
+  <meta name="description" content="Portfolio by Toronto-based UX designer Allison Yan.">
   <meta name="author" content="">
   <meta name="robots" content="index,follow">
   <meta property="og:title" content="Allison Yan | UX Designer" /> 
   <meta property="og:image" content="http://www.allisonyan.com/images/ay.jpg" /> 
-  <meta property="og:description" content="A portfolio of mobile web work in healthcare, mental health and more." /> 
+  <meta property="og:description" content="Portfolio by Toronto-based UX designer Allison Yan." /> 
   <meta property="og:url" content="http://www.allisonyan.com">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
