--- a/work/copd/index.html
+++ b/work/copd/index.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <title>Allison Yan | HQO COPD Clinical Care Guidance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A portfolio by Toronto-based aspiring UX designer, Allison Yan. Having completed a practicum at Healthcare Human Factors, she is currently seeking opportunities in user experience research and design.">
+  <meta name="description" content="Portfolio by Toronto-based UX designer Allison Yan.">
   <meta name="author" content="">
   <meta name="robots" content="index,follow">  
   <link rel="stylesheet" href="../../css/normalize.css">
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/png" href="../../images/favicon.png">
-  <!-- <script>
+  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -31,7 +31,7 @@
   ga('create', 'UA-61633837-1', 'auto');
   ga('send', 'pageview');
 
-</script> -->
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../../jquery.sticky.js"></script>
 <script>
