Update BBM wording, fix directories for healthpro?

--- a/work/bbm/index.html
+++ b/work/bbm/index.html
@@ -146,6 +146,10 @@ with children under 13.
 <p align="center"><img src="bbm-05.png" class="u-max-full-width"></center>
 <h5 class="project-step">Outcomes</h5>
 <P>We gathered more press and interest throughout the summer. We were invited by the GCI group to speak to a group of mothers/parents as well about our concept!</P>
+
+<h5 class="project-step">Awards</h5>
+<strong style="font-size:1.2em"><a href="http://www.hackinghealth.ca/" target='_blank'>Hacking Health for Kids 2014</a></strong>
+<li><ul>Pivot Design Group Award for Best Design </ul></li>
   </div> 
 </div>
 <p>May-September 2014</p>
