--- a/work/healthpro/index.html
+++ b/work/healthpro/index.html
@@ -13,16 +13,16 @@
   <meta charset="utf-8">
   <title>Allison Yan | HealthPRO Pharmaceutical Review Process</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A portfolio by Toronto-based aspiring UX designer, Allison Yan. Having completed a practicum at Healthcare Human Factors, she is currently seeking opportunities in user experience research and design.">
+  <meta name="description" content="Portfolio by Toronto-based UX designer Allison Yan.">
   <meta name="author" content="">
   <meta name="robots" content="index,follow">  
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../../css/normalize.css">
+  <link rel="stylesheet" href="../../css/skeleton.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
-  <link rel="icon" type="image/png" href="images/favicon.png">
-<script>
+  <link rel="icon" type="image/png" href="../../images/favicon.png">
+  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -31,9 +31,9 @@
   ga('create', 'UA-61633837-1', 'auto');
   ga('send', 'pageview');
 
-</script>
+</script> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="jquery.sticky.js"></script>
+<script src="../../jquery.sticky.js"></script>
 <script>
   $(document).ready(function(){
     $("#menu").sticky({topSpacing:0});
@@ -42,17 +42,18 @@
 </head>
 <body>
 
+
 <div class="container">
 
   <div class="row">
     <div class="twelve columns">
 	<div id="menu">
-	<span class="bigbutton"><a class="hvr-fade" href="./">Allison Yan</a></span>
+	<span class="bigbutton"><a class="hvr-fade" href="../../index.html">Allison Yan</a></span>
 		<nav>
           <ul>
-            <a href="about.html"><li>About</li></a>
-            <a href="work.html"><li>Work</li></a>
-            <a href="contact.html"><li>Contact</li></a>
+            <a href="../../about.html"><li>About</li></a>
+            <a href="../../work.html"><li>Work</li></a>
+            <a href="../../contact.html"><li>Contact</li></a>
           </ul>
         </nav>    
 	</div> 
@@ -62,7 +63,6 @@
   <div class="row">
     <div class="twelve columns content">
 	<p><h4 class="project-title">HealthPRO Pharmaceutical Review Process</h4></P>
-	
 	<h6 class="project-subtitle">Optimization of healthcare procurement services</h6>
 	<h6 class="project-type">User Experience, Service Design</h6>
 	<p>HealthPRO is a Canadian pharmaceutical procurement company. 
